--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,11 @@
+* {
+    box-sizing: border-box;
+}
+
 .board {
     display: grid;
-    grid-template-rows: repeat(4, 100px);
-    grid-template-columns: repeat(4, 100px);
+    /* grid-template-rows: repeat(4, 100px);
+    grid-template-columns: repeat(4, 100px); */
 
     gap: 5px;
 }
@@ -9,10 +13,9 @@
 .brick {
     display: grid;
     place-items: center;
-
     border: 1px dashed black;
-
     user-select: none;
+    font-size: 48px;
 }
 
 .brick:hover {
