--- a/src/style.css
+++ b/src/style.css
@@ -2,12 +2,51 @@
     box-sizing: border-box;
 }
 
+body {
+    margin: 0;
+    padding: 0;
+    font-family: monospace;
+    background-color: #d2e4da;
+}
+
+#root {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+
+    width: 100%;
+    height: 100vh;
+}
+
+.menu {
+    display: none;
+    flex-direction: column;
+}
+
+.menu.active {
+    display: flex;
+}
+
+.difficulty {
+    display: none;
+}
+
+.difficulty.active {
+    display: block;
+}
+
 .board {
-    display: grid;
+    display: none;
     /* grid-template-rows: repeat(4, 100px);
     grid-template-columns: repeat(4, 100px); */
 
     gap: 5px;
+}
+
+.board.active {
+    display: grid;
 }
 
 .brick {
@@ -16,8 +55,9 @@
     border: 1px dashed black;
     user-select: none;
     font-size: 48px;
+    cursor: pointer;
 }
 
 .brick:hover {
-    background-color: #e9e9e9a6;
+    background-color: #b9c8c072
 }
