--- a/src/style.css
+++ b/src/style.css
@@ -61,3 +61,11 @@ body {
 .brick:hover {
     background-color: #b9c8c072
 }
+
+.rules {
+    display: none;
+}
+
+.rules.active {
+    display: block;
+}
