--- a/src/style.css
+++ b/src/style.css
@@ -70,3 +70,14 @@ body {
 .rules.active {
     display: block;
 }
+
+.congratulation.active {
+    position: absolute;
+    width: 500px;
+    height: 500px;
+    background-color: red;
+}
+
+.congratulation {
+    display: block;
+}
